--- a/tutorial/0-models-and-events.html
+++ b/tutorial/0-models-and-events.html
@@ -50,11 +50,12 @@ var myTweet = new Tweet();
 /* Backbone models are meant to store data, so it's important to understand
  * their getters and setters: */
 myTweet.set('message', 'Hello, world!');
+myTweet.set('username', 'Daniel!');
 
 /* Using the reference, get the message attribute of the model and display it:
  * http://backbonejs.org/#Model-get */
 
-// window.alert(YOUR CODE HERE);
+window.alert(myTweet.get('message'));
 
 /* - Backbone EVENTS ----------------------------------------------------------
  * Backbone gives us the ability to listen for events on our models,
@@ -83,7 +84,8 @@ myTweet.on('change',
     console.log(e);
 
     // Write code to log the changed attribute:
-    // console.log(YOUR CODE HERE);
+    console.log(myTweet.get('username'));
+    console.log(myTweet.get('message'));
   }
 );
 
@@ -97,7 +99,8 @@ myTweet.on('change',
  * and write a one-liner that will make our `change` listener fire: */
 
 // myTweetYOUR CODE HERE;
-
+myTweet.set('message', 'WHAT UPPPPP!!!');
+myTweet.set('username', 'maryam');
 /* Once you have the `change` event firing, move on to rendering! */
   </script>
   </body>
